# zelfhosted

./: .gitignore  README.md  conductor.json
client/mobile/: App.tsx  package-lock.json  package.json
client/nextjs/: package-lock.json
client/nextjs/app/: ascii-art-logo.ts  ascii-art.ts  globals.css  layout.tsx  page.tsx
server/fastapi/: .env.example  README.md  graph.py  main.py  models.py  pyproject.toml
server/fastapi/tests/: conftest.py  test_api.py  test_graph.py
server/fastapi/tools/: __init__.py  arxiv.py  exa.py  linear.py  mercury.py  photos.py  polymarket.py  spotify.py  subway.py  twitter.py  weather.py  youtube.py
